Add shapes, pick random 'next' shape and draw it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(tetris)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SFML COMPONENTS system window graphics REQUIRED)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
+
 include_directories(${SFML_INCLUDE_DIR})
 add_executable(tetris tetris.cpp)
 target_link_libraries(tetris ${SFML_LIBRARIES})
