Enable warnings as errors, fix warnings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(tetris)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SFML COMPONENTS audio graphics system window REQUIRED)
 
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
+add_compile_options(-std=c++11 -Werror -Wall -Wextra)
 
-include_directories(${SFML_INCLUDE_DIR})
+include_directories(SYSTEM ${SFML_INCLUDE_DIR})
 add_executable(tetris tetris.cpp)
 target_link_libraries(tetris ${SFML_LIBRARIES})
