Stop using relative paths for assets.
Put assets in their own directory & have cmake populate a header with
the absolute path.

As a drive-by, move tetris.cpp to a src/ directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.1.0)
 project(tetris)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SFML COMPONENTS audio graphics system window REQUIRED)
 
 add_compile_options(-std=c++11 -Werror -Wall -Wextra)
 
+set(ASSETS_DIR "${PROJECT_SOURCE_DIR}/assets")
+configure_file(include/config.h.in include/config.h)
+
+include_directories("${PROJECT_BINARY_DIR}/include")
 include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-add_executable(tetris tetris.cpp)
+add_executable(tetris src/tetris.cpp)
 target_link_libraries(tetris ${SFML_LIBRARIES})
