Add high scores.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SFML COMPONENTS audio graphics system window REQUIRED)
 
-add_compile_options(-std=c++11 -Werror -Wall -Wextra)
+# C++14 for declaring lambda parameters as 'auto'
+set(CMAKE_CXX_STANDARD 14)
+
+add_compile_options(-Werror -Wall -Wextra)
 
 set(ASSETS_DIR "${PROJECT_SOURCE_DIR}/assets")
 configure_file(include/config.h.in include/config.h)
